testing/Travis/testcases/TypeChecker/shouldPass/Difference.adl
CONTEXT DifferenceTypeCheck IN ENGLISH

PURPOSE CONTEXT DifferenceTypeCheck
{+ This test must succeed because both operands have signature [A*C]. +}

RELATION r[A*C]
RELATION t[A*C]
RELATION result[A*C]

RULE testDifference: result = t - r

ENDCONTEXT
